--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "electron-compile": "^6.4.2",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
+    "eventemitter2": "^5.0.1",
     "mobx": "^4.2.0",
     "mobx-react": "^5.1.2",
     "react": "^16.3.2",
