--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.2",
+    "react-inspector": "^2.3.0",
     "styled-components": "^3.2.6",
     "tslib": "^1.4.0"
   },
