--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         ]
       },
       "electronPackagerConfig": {
-        "packageManager": "yarn"
+        "packageManager": "npm"
       },
       "electronWinstallerConfig": {
         "name": "panoptic"
@@ -51,7 +51,7 @@
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "electron-compile": "^6.4.2",
-    "electron-devtools-installer": "^2.1.0",
+    "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
     "eventemitter2": "^5.0.1",
     "mobx": "^4.2.0",
@@ -68,8 +68,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "electron": "^2.0.0",
-    "electron-forge": "^5.2.0",
-    "electron-prebuilt-compile": "1.8.4",
+    "electron-forge": "^5.2.1",
+    "electron-prebuilt-compile": "2.0.0",
     "tslint": "^5.1.0",
     "tslint-config-prettier": "^1.12.0",
     "typescript": "~2.8.3"
