--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     }
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "@types/electron-devtools-installer": "^2.0.2",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
@@ -54,6 +55,7 @@
     "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
     "eventemitter2": "^5.0.1",
+    "material-ui": "^1.0.0-beta.45",
     "mobx": "^4.2.0",
     "mobx-react": "^5.1.2",
     "react": "^16.3.2",
