--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
   },
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
+    "@nivo/line": "^0.33.0",
     "@types/electron-devtools-installer": "^2.0.2",
+    "@types/ramda": "^0.25.27",
     "@types/react": "^16.3.13",
     "@types/react-dom": "^16.0.5",
     "electron-compile": "^6.4.2",
@@ -58,6 +60,7 @@
     "material-ui": "^1.0.0-beta.45",
     "mobx": "^4.2.0",
     "mobx-react": "^5.1.2",
+    "ramda": "^0.25.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.2",
