--- a/package.json
+++ b/package.json
@@ -47,26 +47,26 @@
     }
   },
   "dependencies": {
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "@nivo/line": "^0.33.0",
-    "@types/electron-devtools-installer": "^2.0.2",
-    "@types/ramda": "^0.25.27",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
-    "electron-compile": "^6.4.2",
+    "@material-ui/core": "^1.3.1",
+    "@material-ui/icons": "^1.1.0",
+    "@nivo/line": "^0.42.1",
+    "@types/electron-devtools-installer": "^2.0.3",
+    "@types/ramda": "^0.25.34",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "electron-compile": "^6.4.3",
     "electron-devtools-installer": "^2.2.4",
     "electron-squirrel-startup": "^1.0.0",
     "eventemitter2": "^5.0.1",
-    "material-ui": "^1.0.0-beta.45",
-    "mobx": "^4.2.0",
-    "mobx-react": "^5.1.2",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "ramda": "^0.25.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-hot-loader": "^4.1.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-hot-loader": "^4.3.3",
     "react-inspector": "^2.3.0",
-    "styled-components": "^3.2.6",
-    "tslib": "^1.4.0"
+    "styled-components": "^3.3.3",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
